--- a/GhasreMobile/Areas/Admin/Views/Store/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Store/Components/Create.cshtml
@@ -23,7 +23,7 @@
             <div class="form-group col-md-3">
                 <label>شماره تماس</label>
                 <input asp-for="TellNo" type="tel" class="form-control form-control-sm" placeholder="مثال: ...0914">
-            <span class="text-danger" asp-validation-for="TellNo"></span>
+                <span class="text-danger" asp-validation-for="TellNo"></span>
             </div>
         </div>
         <label class="mt-2">تصویر اصلی</label>
@@ -32,6 +32,9 @@
             <input required asp-for="MainImage" type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
             <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر</label>
         </div>
+        <br />
+        <span class="text-success">لطفا اندازه تصویر انتخابی 360*800 باشد</span>
+        <br />
         <span class="text-danger" asp-validation-for="MainImage"></span>
         <hr />
         <div class="form-row">
