--- a/GhasreMobile/Areas/Admin/Views/Store/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Store/Components/Edit.cshtml
@@ -34,6 +34,9 @@
             <input name="Image" type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
             <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر</label>
         </div>
+        <br />
+        <span class="text-success">لطفا اندازه تصویر انتخابی 360*800 باشد</span>
+        <br />
         <span class="text-danger" asp-validation-for="MainImage"></span>
         <hr />
         <div class="form-row">
