Express View Single

--- a/GhasreMobile/Views/Product/Index.cshtml
+++ b/GhasreMobile/Views/Product/Index.cshtml
@@ -38,8 +38,28 @@
     </div>
 
     <div class="pr-image">
-        <div class="head">
-
+        <div class="head uk-padding-small border row uk-margin-small-bottom">
+            <ul class="timer uk-margin-auto-right" countdown="2020/01/01">
+                <li>
+                    <label day></label>
+                    <span>روز</span>
+                </li>
+                <li>
+                    <label hour></label>
+                    <span>ساعت</span>
+                </li>
+                <li>
+                    <label minute></label>
+                    <span>دقیقه</span>
+                </li>
+                <li>
+                    <label second></label>
+                    <span>ثانیه</span>
+                </li>
+            </ul>
+            <h3 class="percentage uk-text-danger">
+                36%
+            </h3>
         </div>
         <div uk-slideshow="animation: slide; ratio:1:1">
             <div class="border">
