--- a/GhasreMobile/wwwroot/css/pages/product.scss
+++ b/GhasreMobile/wwwroot/css/pages/product.scss
@@ -507,3 +507,46 @@
         }
     }
 }
+
+.timer {
+    @include row;
+    grid-column-gap: 9px;
+    margin-top: 0;
+    margin-right: auto;
+
+    li {
+        @include column;
+
+        label {
+            margin: 0 auto;
+            font-size: 15px;
+            line-height: 1;
+            background-color: #F5F5F5;
+            min-width: 16px !important;
+            max-width: 16px !important;
+            text-align: center;
+            padding: 6px;
+            color: $Text-2;
+            @include border-radius(9px,9px,9px,9px);
+        }
+
+        span {
+            margin: 0 auto;
+            margin-top: 4px;
+            font-size: 9px;
+            color: $Text-2;
+        }
+    }
+}
+
+.percentage {
+    background-color: transparent;
+    color: #e0173c !important;
+    padding: 4px;
+    margin: auto;
+    font-weight: 500;
+    margin-right: 0;
+    vertical-align: central;
+    @include border-def-radius;
+    border: 2px solid #e0173c;
+}
