--- a/GhasreMobile/wwwroot/css/Controls.scss
+++ b/GhasreMobile/wwwroot/css/Controls.scss
@@ -807,7 +807,9 @@ $background-highlight: #eee;
                     color: $primary;
                     background-color: #fff;
                     margin: auto 12px;
-                    padding: 0 4px;
+                    padding: 0;
+                    height: 19px;
+                    width: 19px;
                     @include border-circle;
                     display: flex;
                     max-width: 21px;
@@ -2090,4 +2092,3 @@ div[role=none][id] {
     position: absolute;
     margin-top: -1 * ($nav-header-height + 18px);
 }
-
