--- a/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
@@ -117,15 +117,23 @@
                 <div class="form-row mt-3">
                     <div class="form-group col-md-5">
                         <label class="uk-text-bold">افزودن ویژگی</label>
-                        <input id="NewPropertyName" class="form-control form-control-sm" placeholder="مثال : حافظه داخلی">
-                        <span id="CreateNewPropertyErorr" class="text-danger"></span>
+                        <a onclick="CreateProperty()" data-toggle="modal" data-target="#modalSave" class="btn btn-info btn-sm text-white">افزودن</a>
                     </div>
                     <div class="form-group col-md-2 mt-md-4 pt-2">
-                        <a onclick="CreateProperty()" class="btn btn-info btn-sm text-white">افزودن</a>
+
                     </div>
                 </div>
                 <aside id="PropertyPanel">
-                    @await Component.InvokeAsync("PropertyListAdmin", Model.ProductId)
+                    @foreach (var item in Model.TblProductPropertyRel)
+                    {
+                        <div id="PropertyInCreate-@item.PropertyId" class="form-inline col-md-7 mt-2">
+                            <label class="ml-5 p-0 col-md-2 uk-text-right justify-content-start">@item.Property.Name:</label>
+                            <input id="PropetryNameId" name="PropertyId" type="hidden" value="@item.PropertyId" />
+                            <input id="PropertyValue" name="Value" class="form-control form-control-sm col-md-3 col-9" value="@item.Value">
+                            <a onclick="DeleteProperty(@item.PropertyId)" class="text-danger col-2 mr-1" uk-icon="close-circle">
+                            </a>
+                        </div>
+                    }
                 </aside>
                 <hr />
                 <div class="mt-3">
@@ -206,11 +214,11 @@
         function SetNewInputGallery() {
             $("#GalleryPanel").append(
                 `<div class="custom-file col-md-7 mt-3">
-                                       <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" name="GalleryFile" onchange="inputChanged(this)"/>
-                                       <label class="custom-file-label" data-browse="انتخاب">
-                                            انتخاب فایل
-                                       </label>
-                                     </div>`
+                                           <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" name="GalleryFile" onchange="inputChanged(this)"/>
+                                           <label class="custom-file-label" data-browse="انتخاب">
+                                                انتخاب فایل
+                                           </label>
+                                         </div>`
             );
 
             //$("#GalleryPanel").append("<div><input type='file' accept='image/x-png,image/gif,image/jpeg' name='GalleryFile'/></div>");
@@ -277,23 +285,13 @@
         }
 
         function CreateProperty() {
-            var Name = $("#NewPropertyName").val();
-            if (Name == "" || Name == null) {
-                $("#CreateNewPropertyErorr").html("لطفا نام ویژگی را وارد کنید");
-            } else {
-                $.post("/Admin/Property/Create?Name=" + Name, function (result) {
-                    if (result == "true") {
-                        $("#CreateNewPropertyErorr").html("");
-                        $("#PropertyPanel").html("");
-                        $("#NewPropertyName").val("");
-                        $.get("/Admin/Product/PropertyList", function (result) {
-                            $("#PropertyPanel").html(result);
-                        });
-                    } else {
-                        $("#CreateNewPropertyErorr").html(result);
-                    }
-                });
-            }
+            $.get("/Admin/Product/PropertyList", function (result) {
+                $(".modal-content").html(result);
+            });
+        }
+
+        function DeleteProperty(id) {
+            $("#PropertyInCreate-" + id).remove();
         }
 
         function RemoveImageGallery(imageId) {
