--- a/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
@@ -45,49 +45,64 @@
                         <tbody>
                             @foreach (var item in Model)
                             {
-                            <tr>
-                                <td>@item.ProductId</td>
-                                <td>@item.Name</td>
-                                <td>
-                                    @if (item.PriceAfterDiscount == 0)
-                                    {
-                                        <span>@item.PriceBeforeDiscount.Value.ToString("#,0 تومان")</span>
-                                    }
-                                    else
-                                    {
-                                        <span class="text-danger">@item.PriceAfterDiscount.Value.ToString("#,0 تومان") تخفیف دار</span>
-                                    }
-                                </td>
-                                <td>@item.DateCreated.Value.AllToShamsi()</td>
-                                <td>
-                                    @if (item.TblSpecialOffer.Count == 0)
-                                    {
-                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="افزودن به پیشنهاد ویژه">
-                                            <a onclick="SpecialOffer(@item.ProductId)" class="text-primary" data-toggle="modal" data-target="#modalSave" uk-icon="bookmark-outline"></a>
+                                <tr>
+                                    <td>@item.ProductId</td>
+                                    <td>@item.Name</td>
+                                    <td>
+                                        @if (item.PriceAfterDiscount == 0)
+                                        {
+                                            <span>@item.PriceBeforeDiscount.Value.ToString("#,0 تومان")</span>
+                                        }
+                                        else
+                                        {
+                                            <span class="text-danger">@item.PriceAfterDiscount.Value.ToString("#,0 تومان") تخفیف دار</span>
+                                        }
+                                    </td>
+                                    <td>@item.DateCreated.Value.AllToShamsi()</td>
+                                    <td>
+                                        @if (item.TblSpecialOffer.Count == 0)
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="افزودن به پیشنهاد ویژه">
+                                                <a onclick="SpecialOffer(@item.ProductId)" class="text-primary" data-toggle="modal" data-target="#modalSave" uk-icon="bookmark-outline"></a>
+                                            </span>
+                                        }
+                                        else
+                                        {
+                                            <span class="text-danger" data-placement="top" data-toggle="tooltip" title="" data-original-title="به پیشنهاد ویژه">
+                                                @item.TblSpecialOffer.First().Discount% تا تاریخ @item.TblSpecialOffer.First().ValidTill.AllToShamsi()
+                                            </span>
+                                            <span onclick="CancelSpecialOffer(@item.ProductId)" class="btn btn-danger btn-sm text-white" data-placement="top" data-toggle="tooltip" title="" data-original-title="به پیشنهاد ویژه">
+                                                لغو پیشنهاد ویژه
+                                            </span>
+                                        }
+                                    </td>
+                                    <td>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="وضعیت موجودی">
+                                            <a onclick="Stock(@item.ProductId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="document-text"></a>
                                         </span>
-                                    }
-                                    else
-                                    {
-                                        <span class="text-danger" data-placement="top" data-toggle="tooltip" title="" data-original-title="به پیشنهاد ویژه">
-                                            @item.TblSpecialOffer.First().Discount% تا تاریخ @item.TblSpecialOffer.First().ValidTill.AllToShamsi()
+                                    </td>
+                                    <td>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
+                                            <a href="/Admin/Product/Edit/@item.ProductId" class="text-primary" uk-icon="create-outline"></a>
                                         </span>
-                                        <span onclick="CancelSpecialOffer(@item.ProductId)" class="btn btn-danger btn-sm text-white" data-placement="top" data-toggle="tooltip" title="" data-original-title="به پیشنهاد ویژه">
-                                            لغو پیشنهاد ویژه
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="حذف">
+                                            <a onclick="Delete(@item.ProductId)" class="text-danger" uk-icon="trash-outline"></a>
                                         </span>
-                                    }
-                                </td>
-                                <td>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="وضعیت موجودی">
-                                        <a onclick="Stock(@item.ProductId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="document-text"></a>
-                                    </span>
-                                </td>
-                                <td>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
-                                        <a href="/Admin/Product/Edit/@item.ProductId" class="text-primary" uk-icon="create-outline"></a>
-                                    </span>
-                                </td>
+                                        @if (item.IsDeleted)
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="شروع فروش">
+                                                <a onclick="Selling(@item.ProductId)" class="text-success" uk-icon="checkmark-outline"></a>
+                                            </span>
+                                        }
+                                        else
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="توقف فروش">
+                                                <a onclick="Selling(@item.ProductId)" class="text-danger" uk-icon="ban-outline"></a>
+                                            </span>
+                                        }
+                                    </td>
 
-                            </tr>
+                                </tr>
                             }
                         </tbody>
                     </table>
@@ -129,6 +144,23 @@
                 window.location.reload();
             });
         }
+
+        function Delete(id) {
+            $.post("/Admin/Product/Delete/" + id, function (result) {
+                if (result == "true") {
+                    window.location.reload();
+                } else {
+                    UIkit.notification({ message: result });
+                }
+            });
+        }
+
+        function Selling(id) {
+            $.post("/Admin/Product/Selling/" + id, function () {
+                window.location.reload();
+            });
+        }
+
 
     </script>
 }
