--- a/GhasreMobile/Areas/Admin/Views/Config/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Config/Index.cshtml
@@ -17,10 +17,10 @@
                       data-ajax-complete="EndCatagoryCreate()"
                       data-ajax-update="#ajaxresult">
                     @*<div class="form-group col-lg-12">
-                        <label>هزینه ارسال با پست: </label>
-                        <input asp-for="HazineErsalBaPost" class="form-control form-control-sm d-inline-block d-sm-block col-lg-10 float-left" placeholder="مثال: 19,000">
-                        <br /><span class="text-danger" asp-validation-for="HazineErsalBaPost"></span>
-                    </div>*@
+            <label>هزینه ارسال با پست: </label>
+            <input asp-for="HazineErsalBaPost" class="form-control form-control-sm d-inline-block d-sm-block col-lg-10 float-left" placeholder="مثال: 19,000">
+            <br /><span class="text-danger" asp-validation-for="HazineErsalBaPost"></span>
+        </div>*@
                     <div class="form-group col-lg-12">
                         <label>سقف هزینه ارسال رایگان: </label>
                         <input data-type='currency' class="form-control form-control-sm d-inline-block d-sm-block col-lg-10 float-left PriceInput" placeholder="مثال: 19,000">
@@ -29,15 +29,15 @@
                     </div>
 
                     @*<div class="form-group col-lg-12 mt-lg-3">
-                        <label>هزینه ارسال با تیپاکس و چاپار</label>
-                        <input asp-for="HazineErsalBaTipaxChapare" class="form-control form-control-sm d-inline-block d-sm-block col-lg-10 float-left" placeholder="مثال: 28,000">
-                        <br /><span class="text-danger" asp-validation-for="HazineErsalBaTipaxChapare"></span>
-                    </div>*@
+            <label>هزینه ارسال با تیپاکس و چاپار</label>
+            <input asp-for="HazineErsalBaTipaxChapare" class="form-control form-control-sm d-inline-block d-sm-block col-lg-10 float-left" placeholder="مثال: 28,000">
+            <br /><span class="text-danger" asp-validation-for="HazineErsalBaTipaxChapare"></span>
+        </div>*@
                     @*<div class="form-group col-lg-12 mt-lg-3">
-                        <label>هزینه ارسال با پست:</label>
-                        <input asp-for="HazineErsalPeyk" class="form-control form-control-sm d-inline-block d-sm-block col-lg-10 float-left" placeholder="مثال: 28,000">
-                        <br /><span class="text-danger" asp-validation-for="HazineErsalPeyk"></span>
-                    </div>*@
+            <label>هزینه ارسال با پست:</label>
+            <input asp-for="HazineErsalPeyk" class="form-control form-control-sm d-inline-block d-sm-block col-lg-10 float-left" placeholder="مثال: 28,000">
+            <br /><span class="text-danger" asp-validation-for="HazineErsalPeyk"></span>
+        </div>*@
                     <div class="form-group col-lg-12 mt-lg-3">
                         <label>تماس با ما:</label>
                         <textarea asp-for="TamasBaMa" class="form-control form-control-sm d-inline-block d-sm-block col-lg-12" placeholder="..."></textarea>
@@ -82,6 +82,11 @@
                         <label>لینک تلگرم:</label>
                         <textarea asp-for="LinkTelegram" class="form-control form-control-sm d-inline-block d-sm-block col-lg-12" placeholder="..."></textarea>
                         <br /><span class="text-danger" asp-validation-for="LinkTelegram"></span>
+                    </div>
+                    <div class="form-group col-lg-12 mt-lg-3">
+                        <label>توضیحات خرید اقساطی:</label>
+                        <textarea asp-for="KharidAgsady" class="form-control form-control-sm d-inline-block d-sm-block col-lg-12" placeholder="..."></textarea>
+                        <br /><span class="text-danger" asp-validation-for="KharidAgsady"></span>
                     </div>
                     <button type="submit" class="btn btn-success btn-sm text-white">ثبت تغییرات<span class="icon-holder uk-margin-small-right" uk-icon="create-outline"></span></button>
                 </form>
