--- a/GhasreMobile/Areas/Admin/Views/Bank/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Bank/Index.cshtml
@@ -17,12 +17,6 @@
                         <div class="form-input">
                             <div class="form-inline">
                                 <div class="form-group mx-sm-1 mb-2">
-                                    <input id="SearchInputId" class="form-control uk-text-small" type="text" placeholder="کد سفارش" value="">
-                                </div>
-                                <div class="form-group mx-sm-1 mb-2">
-                                    <input id="SearchInputUserPhone" class="form-control uk-text-small" type="text" placeholder="شماره تماس مشتری" value="">
-                                </div>
-                                <div class="form-group mx-sm-1 mb-2">
                                     <input readonly id="startDate" class="form-control uk-text-small" type="text" placeholder="از تاریخ  " value="">
                                 </div>
                                 <div class="form-group mx-sm-1 mb-2">
@@ -96,5 +90,12 @@
             $("#startDate").persianDatepicker();
             $("#endDate").persianDatepicker();
         });
+
+        function BtnSearch() {
+            var startDate = $("#startDate").val();
+            var endDate = $("#endDate").val();
+            window.location.href = "/Admin/Bank?page=1&startDate=" + startDate + "&endDate=" + endDate;
+        }
+
     </script>
 }
