--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -85,6 +85,7 @@
                 </a>
                 <div class="search">
                     <span onclick="window.location = '/Search?q=' + (this.parentElement.querySelector('[name=q]').value);//SEARCH" class="link-text" uk-icon="search"></span>
+                    <label class="adv">جستجو پیشرفته</label>
                     <input id="txtSearchMain" class="entry-invis"
                            type="text" placeholder="جستجو..." name="q"
                            aria-label="جستجو"
