--- a/GhasreMobile/wwwroot/css/Controls.css
+++ b/GhasreMobile/wwwroot/css/Controls.css
@@ -652,6 +652,16 @@ textarea {
         margin-right: auto;
         margin-top: auto;
         margin-bottom: auto; }
+      .header .top .search .adv {
+        margin: auto;
+        margin-left: 6px;
+        font-size: 12px;
+        color: #c3c3c3;
+        text-wrap: none;
+        white-space: nowrap; }
+      @media only screen and (max-width: 640px) {
+        .header .top .search .adv {
+          display: none; } }
       .header .top .search #txtSearchMain {
         color: #333;
         flex: auto; }
