--- a/GhasreMobile/wwwroot/css/Controls.scss
+++ b/GhasreMobile/wwwroot/css/Controls.scss
@@ -575,6 +575,21 @@ $background-highlight: #eee;
                 margin-bottom: auto;
             }
 
+            .adv {
+                margin: auto;
+                margin-left: 6px;
+                font-size: 12px;
+                color: #c3c3c3;
+                text-wrap: none;
+                white-space: nowrap;
+            }
+
+            @media only screen and (max-width: 640px) {
+                .adv {
+                    display: none;
+                }
+            }
+
             #txtSearchMain {
                 color: $Text;
                 @include placeholder($Text-5);
