بابا گوییون گالسون دا اه نیه ویریسیز آخر جون ظاهری داغیدیسیز

--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -84,9 +84,11 @@
                     <img src="~/st/r/logo.jpg" width="48" height="48" alt="لوگو فصر موبایل" />
                 </a>
                 <div class="search">
-                    <span onclick="window.location = '/Search?q=' + (this.parentElement.querySelector('[name=q]').value);//SEARCH" class="link-text" uk-icon="search"></span>
-                    <label class="adv">جستجو پیشرفته</label>
-                    <input id="txtSearchMain" class="entry-invis"
+                    <span class="btn btn-primary" dir="rtl" onclick="window.location = '/Search?q=' + (this.parentElement.querySelector('[name=q]').value)">
+                        <span>جستجو پیشرفته</span>
+                        <span uk-icon="search"></span>
+                    </span>
+                    <input id="txtSearchMain" dir="rtl" class="entry-invis"
                            type="text" placeholder="جستجو..." name="q"
                            aria-label="جستجو"
                            oninput="SearchInput(this)" />
