--- a/GhasreMobile/wwwroot/css/Controls.css
+++ b/GhasreMobile/wwwroot/css/Controls.css
@@ -642,26 +642,20 @@ textarea {
       -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
       -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
       box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
-      padding: 2px 6px 2px 12px;
+      padding: 2px 6px 2px 6px;
       margin: auto 0;
       flex: auto;
       max-width: 624px;
       display: flex; }
-      .header .top .search span {
-        color: #ccc;
+      .header .top .search > span {
         margin-right: auto;
         margin-top: auto;
-        margin-bottom: auto; }
-      .header .top .search .adv {
-        margin: auto;
-        margin-left: 6px;
-        font-size: 12px;
-        color: #c3c3c3;
-        text-wrap: none;
-        white-space: nowrap; }
-      @media only screen and (max-width: 640px) {
-        .header .top .search .adv {
-          display: none; } }
+        margin-bottom: auto;
+        height: 22px;
+        min-height: 22px;
+        padding: 4px 6px !important; }
+        .header .top .search > span > span {
+          font-size: 11px; }
       .header .top .search #txtSearchMain {
         color: #333;
         flex: auto; }
